# hypervector-lab

./: ACADEMIC_RESEARCH_PUBLICATION_PACKAGE.md  API_REFERENCE.md  AUTONOMOUS_EXECUTION_FINAL_REPORT.md  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_EXECUTION_REPORT.md  AUTONOMOUS_SDLC_FINAL_EXECUTION_REPORT.md  AUTONOMOUS_SDLC_FINAL_REPORT.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.gpu  Dockerfile.production  FINAL_AUTONOMOUS_EXECUTION_SUMMARY.md  FINAL_AUTONOMOUS_RESEARCH_EXECUTION_REPORT.md  FINAL_AUTONOMOUS_SDLC_EXECUTION_REPORT_v4.md  FINAL_EXECUTION_REPORT.md  IMPLEMENTATION_SUMMARY.md  PRODUCTION_DEPLOYMENT_GUIDE.md  README.md  RESEARCH_ENHANCEMENTS_REPORT.md  autonomous_research_validation_suite.py  comprehensive_quality_assurance.py  comprehensive_quality_gates.py  comprehensive_research_validation.py  comprehensive_research_validation_suite.py  deploy-production.sh  deploy.sh  deployment_orchestrator.py  deployment_report.json  docker-compose.yml  enhanced_validation.py  final_comprehensive_test.py  generation1_core_enhancement.py  generation1_results.json  generation2_results.json  generation2_robustness_enhancer.py  generation2_robustness_suite.py  generation3_performance_optimizer.py  generation3_results.json  generation3_scaling_optimizer.py  minimal_research_validation.py  (+22 more)
autonomous_validation_results/: autonomous_validation_report.md  validation_results.json
deployment_output/: Dockerfile  configmap.yaml  deploy-k8s.sh  deploy.sh  deployment.yaml  deployment_report.json  docker-compose.yml  monitoring.yaml  requirements.txt  service.yaml
examples/: quickstart_advanced.py
hdc_env/: pyvenv.cfg
hypervector/accelerators/: __init__.py  batch_processor.py  cache.py  cpu_optimized.py  gpu_optimization.py  memory_manager.py  quantum_accelerated_hdc.py
hypervector/applications/: __init__.py  autonomous_reasoning.py  bci.py  cross_modal_foundation_model.py  retrieval.py
hypervector/benchmark/: __init__.py  benchmarks.py  performance.py  profiler.py
hypervector/core/: hypervector.py  monitoring.py  operations.py  system.py
production_deployment/: Dockerfile  README.md  deployment_report.json  docker-compose.yml
tests/: __init__.py  test_applications.py  test_comprehensive_advanced_features.py  test_core.py  test_encoders.py  test_integration.py
(+116 files in other folders)
